master - Fixed the collapsing of diffs - Updated to the latest JSTree

--- a/pullrequest.css
+++ b/pullrequest.css
@@ -12,7 +12,7 @@
     margin-left: 10px;
 }
 
-.js-selectable-text {
+.user-select-contain {
     cursor: pointer;
 }
 
